objects/sumoapp__AdditionalInfo__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>sumoapp__Location__c</referenceTo>
        <relationshipLabel>Location Infos</relationshipLabel>
        <relationshipName>LocationInfos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__MaxBookings__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>This is the total number of spaces a single person can reserve at once.  For example, some events allow one person to book 4 people for a table without requiring each person to register.</inlineHelpText>
        <label>Max Bookings</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__MaxRegistrationErrorMessage__c</fullName>
        <inlineHelpText>If you limit the number of times an attendee can register for this event, make sure you update your policy message to reflect the message you want them to see when they are registering for the event.</inlineHelpText>
        <label>Max Registration Policy Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__MaxRegistrationPerAttendee__c</fullName>
        <inlineHelpText>If you wish to limit the # of times a person can register for this event, you may configure this setting here. You must then enter in the text below to explain to the registrants what the limit is.</inlineHelpText>
        <label>Max Registration Per Attendee</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__MaximumAdvanceTimeToRegisterInterval__c</fullName>
        <defaultValue>&quot;DAYS&quot;</defaultValue>
        <label>Max Advance Time To Register Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>sumoapp__TimePeriods</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__MaximumAdvanceTimeToRegister__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Maximum Advance Time To Register</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__MinimumAdvanceTimeToCancelInterval__c</fullName>
        <defaultValue>&quot;DAYS&quot;</defaultValue>
        <label>Min Advance Time To Cancel Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>sumoapp__TimePeriods</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__MinimumAdvanceTimeToCancel__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Minimum Advance Time To Cancel</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__MinimumAdvanceTimeToRegisterInterval__c</fullName>
        <defaultValue>&quot;DAYS&quot;</defaultValue>
        <label>Min Advance Time To Register Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>sumoapp__TimePeriods</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__MinimumAdvanceTimeToRegister__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Minimum Advance Time To Register</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__NextTimeReminderSend__c</fullName>
        <label>Next Time Reminder Send</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__NoteForAdditionalAttendees__c</fullName>
        <label>Note For Additional Attendees</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Note</label>
        <referenceTo>sumoapp__Note__c</referenceTo>
        <relationshipLabel>Note Infos</relationshipLabel>
        <relationshipName>NoteInfos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__NumberOfReschedule__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Reschedule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__Organizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organizer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Organizer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>sumoapp__AdditionalInfo__c</referenceTo>
        <relationshipLabel>Child Events</relationshipLabel>
        <relationshipName>ChildEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__PastAction__c</fullName>
        <label>Past Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CREATE</fullName>
                    <label>Create</label>
                </value>
                <value>
                    <fullName>EDIT</fullName>
                    <label>Edit</label>
                </value>
                <value>
                    <fullName>RESCHEDULE</fullName>
                    <label>Reschedule</label>
                </value>
                <value>
                    <fullName>CANCEL</fullName>
                    <label>Cancel</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__PaymentType__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FREE_EVENT</fullName>
                    <label>Free Event</label>
                </value>
                <value>
                    <fullName>PAY_AT_ONLINE_REGISTRATION</fullName>
                    <label>Pay at Online Registration</label>
                </value>
                <value>
                    <fullName>PAY_AT_EVENT_ENTRY</fullName>
                    <label>Pay at Event Entry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__PlaceId__c</fullName>
        <description>Google Place Id corresponding to event location</description>
        <label>Place Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__PricePerSeat__c</fullName>
        <label>Price per Seat</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sumoapp__Price__c</fullName>
        <label>Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sumoapp__PrimaryClientId__c</fullName>
        <label>Primary Client Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Process</label>
        <referenceTo>sumoapp__Process__c</referenceTo>
        <relationshipLabel>Process Infos</relationshipLabel>
        <relationshipName>ProcessInfos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__RecurringCount__c</fullName>
        <label>Recurring Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__RecurringEndDate__c</fullName>
        <label>Recurring End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sumoapp__RecurringMonthDay__c</fullName>
        <label>Recurring Month Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__RecurringPatternDescription__c</fullName>
        <label>Recurring Pattern Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__RecurringStartDateTime__c</fullName>
        <label>Recurring Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__RecurringStartDate__c</fullName>
        <label>Recurring Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sumoapp__RecurringStartTime__c</fullName>
        <label>Recurring Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>sumoapp__RecurringWeekDay__c</fullName>
        <label>Recurring Week Day</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Su</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>M</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Tu</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>W</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Th</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Fr</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Sa</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__RegisteredAttendeeCount__c</fullName>
        <label>Registered Attendee Count</label>
        <summaryFilterItems>
            <field>sumoapp__Attendee__c.sumoapp__Status__c</field>
            <operation>notEqual</operation>
            <value>CANCELED, WAITLISTED, DRAFT, DECLINED</value>
        </summaryFilterItems>
        <summaryForeignKey>sumoapp__Attendee__c.sumoapp__SumoEvent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sumoapp__ReminderEmailOptions__c</fullName>
        <label>Send Email Reminder</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>sumoapp__IsReminderSent__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>sumoapp__ReminderOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__RescheduleLinkShort__c</fullName>
        <label>Short Cancel/Reschedule Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sumoapp__RescheduleLink__c</fullName>
        <label>Cancel/Reschedule Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sumoapp__Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>sumoapp__Service__c</referenceTo>
        <relationshipLabel>Service Infos</relationshipLabel>
        <relationshipName>ServiceInfos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__ShowInternalEmails__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Internal Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EMAIL_INVITE</fullName>
                    <label>Email Invite</label>
                </value>
                <value>
                    <fullName>APPT_LINK</fullName>
                    <label>Appt Link</label>
                </value>
                <value>
                    <fullName>NEW_APPT</fullName>
                    <label>Instant Booker</label>
                </value>
                <value>
                    <fullName>ONLINE_SCHEDULER</fullName>
                    <label>Online Scheduler</label>
                </value>
                <value>
                    <fullName>MC_EVENT</fullName>
                    <label>Multi-Calendar Event</label>
                </value>
                <value>
                    <fullName>MC_NEW_APPT</fullName>
                    <label>Multi-Calendar Appt</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__StartDatetime__c</fullName>
        <label>Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__StartInterval__c</fullName>
        <label>Appointment Start Time Interval (GMT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__StartTime__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>sumoapp__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOOKED</fullName>
                    <default>true</default>
                    <label>Booked</label>
                </value>
                <value>
                    <fullName>CANCELED</fullName>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>RESCHEDULED</fullName>
                    <label>Rescheduled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__SumoId__c</fullName>
        <externalId>true</externalId>
        <label>Sumo Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__TextOptIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Text Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__TimeZoneSidKey__c</fullName>
        <label>TimeZoneSidKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__TotalCheckedInAttendee__c</fullName>
        <label>Total Registered Attendee</label>
        <summarizedField>sumoapp__Attendee__c.sumoapp__NumberOfCheckIns__c</summarizedField>
        <summaryForeignKey>sumoapp__Attendee__c.sumoapp__SumoEvent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sumoapp__TotalRegisteredAttendee__c</fullName>
        <label>Total Registered Attendee</label>
        <summarizedField>sumoapp__Attendee__c.sumoapp__NumberOfSeats__c</summarizedField>
        <summaryFilterItems>
            <field>sumoapp__Attendee__c.sumoapp__IsRegisteredSeats__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>sumoapp__Attendee__c.sumoapp__SumoEvent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sumoapp__TotalWaitlistedAttendee__c</fullName>
        <label>Total Waitlisted Attendee</label>
        <summarizedField>sumoapp__Attendee__c.sumoapp__NumberOfSeats__c</summarizedField>
        <summaryFilterItems>
            <field>sumoapp__Attendee__c.sumoapp__Status__c</field>
            <operation>equals</operation>
            <value>WAITLISTED</value>
        </summaryFilterItems>
        <summaryForeignKey>sumoapp__Attendee__c.sumoapp__SumoEvent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sumoapp__UpdateSummary__c</fullName>
        <label>Update Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__VirtualEventDetails__c</fullName>
        <label>Virtual Event Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>sumoapp__VirtualEventId__c</fullName>
        <description>Id of a Web Conference</description>
        <label>Virtual Event Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__VirtualEventType__c</fullName>
        <label>Virtual Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>sumoapp__WebConferenceTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__VirtualEventUrl__c</fullName>
        <label>Virutal Event URL</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__WaitlistNotificationType__c</fullName>
        <label>Waitlist Notification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EMAIL_ONLY</fullName>
                    <label>Email Only</label>
                </value>
                <value>
                    <fullName>TEXT_MESSAGE_ONLY</fullName>
                    <label>Text Message Only</label>
                </value>
                <value>
                    <fullName>EMAIL_AND_TEXT_MESSAGE</fullName>
                    <label>Email &amp; Text Message</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__WaitlistedAttendeeCount__c</fullName>
        <label>Waitlisted Attendee Count</label>
        <summaryFilterItems>
            <field>sumoapp__Attendee__c.sumoapp__Status__c</field>
            <operation>equals</operation>
            <value>Waitlisted</value>
        </summaryFilterItems>
        <summaryForeignKey>sumoapp__Attendee__c.sumoapp__SumoEvent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sumoapp__WhoName__c</fullName>
        <label>Who Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SUMO Additional Info</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ClientCase__c</columns>
        <columns>sumoapp__Duration__c</columns>
        <columns>sumoapp__EventName__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>sumoapp__StartDatetime__c</columns>
        <columns>sumoapp__EndDatetime__c</columns>
        <columns>sumoapp__Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Appointments</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__EventName__c</columns>
        <columns>ClientCase__c</columns>
        <columns>sumoapp__DurationInMinutes__c</columns>
        <columns>sumoapp__Location__c</columns>
        <columns>sumoapp__StartDatetime__c</columns>
        <columns>sumoapp__EndDatetime__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>sumoapp__AdditionalInfo__c.sumoapp__Appointment</value>
        </filters>
        <label>Appointments</label>
    </listViews>
    <listViews>
        <fullName>Course_Series</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__EventName__c</columns>
        <columns>sumoapp__Capacity__c</columns>
        <columns>sumoapp__RegisteredAttendeeCount__c</columns>
        <columns>ClientCase__c</columns>
        <columns>sumoapp__DurationInMinutes__c</columns>
        <columns>sumoapp__Location__c</columns>
        <columns>sumoapp__MaxBookings__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>sumoapp__AdditionalInfo__c.sumoapp__Course</value>
        </filters>
        <filters>
            <field>IsParent__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Course Series</label>
    </listViews>
    <listViews>
        <fullName>Course_Session</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__EventName__c</columns>
        <columns>sumoapp__Capacity__c</columns>
        <columns>sumoapp__RegisteredAttendeeCount__c</columns>
        <columns>sumoapp__StartDatetime__c</columns>
        <columns>ClientCase__c</columns>
        <columns>sumoapp__DurationInMinutes__c</columns>
        <columns>sumoapp__Location__c</columns>
        <columns>sumoapp__MaxBookings__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>sumoapp__AdditionalInfo__c.sumoapp__Event</value>
        </filters>
        <label>Course Session</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>SUMO Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Additional Info</pluralLabel>
    <recordTypes>
        <fullName>sumoapp__Appointment</fullName>
        <active>true</active>
        <label>Appointment</label>
    </recordTypes>
    <recordTypes>
        <fullName>sumoapp__Course</fullName>
        <active>true</active>
        <label>Course</label>
    </recordTypes>
    <recordTypes>
        <fullName>sumoapp__Event</fullName>
        <active>true</active>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>sumoapp__EventClass</fullName>
        <active>true</active>
        <label>Event Class</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>course_session_Recurring_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>sumoapp__IsRecurring__c &amp;&amp; RecordType.DeveloperName  =&apos;Event&apos;</errorConditionFormula>
        <errorMessage>Recurring Event must be disabled to create a course session.</errorMessage>
    </validationRules>
</CustomObject>